[project]
name = "exasol-python-extension-common"
version = "1.0.0"
description = "A collection of common utilities for Exasol extensions."
authors = [{ name = "Mikhail Beck", email = "mikhail.beck@exasol.com" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pyexasol>=0.25.0, <3",
    "exasol-bucketfs>=0.10.0, <3",
    "click>=8.1.7,<9",
    "exasol-saas-api>=2.10.0, <3",
    "requests>=2.33.0",
    "tenacity>=8.3.0,<9",
]

[project.optional-dependencies]
slc-tool = ["exasol-script-languages-container-tool>=3, <5"]

[dependency-groups]
dev = [
    "pytest>=7.2.0,<10",
    "exasol-toolbox>=8.1.1, <9",
    "pytest-exasol-backend>=0.4.0,<2",
    "exasol-script-languages-container-tool>=3, <5",
]

[tool.poetry]
requires-poetry = ">=2.3.0"
packages = [ {include = "exasol"}, ]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15

[tool.black]
line-length = 100
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 6.3

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "saas: integration test that creates a db in SaaS.",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.sonar]
projectKey = "com.exasol:python-extension-common"
host.url = "https://sonarcloud.io"
organization = "exasol"
